# aircraft_classification

./: .gitignore  CHANGELOG.md  ChangeLog  README.md  aircraft_classification.py  aircraft_types.py  classifiers.py  colab_example_notebook.ipynb  data_setup.py  design.txt  download_and_prepare_dataset.py  fit_model.py  parameters.py  pyproject.toml  requirements.txt  run.py
aircraft_classification/: data_setup.py  download_and_prepare_dataset.py  fit_model.py  parameters.py
src/aircraft_classification/: download_and_prepare_dataset.py  fit_model.py  parameters.py
