[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "aircraft_classification"
authors = [
  { name="Jonathan Edge", email="j.edge@zoho.com" },
]
description = "A simple for training an aircraft classifier."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= ['tqdm',
    'torch',
    'torchvision',
    'torchmetrics',
    'tensorboard',
    'pytest',
    'pandas',
    'ml_utils_jme45',
    'aircraft_classifiers_jme45']
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jme45/aircraft_classification"
Issues = "https://github.com/jme45/aircraft_classification/issues"

[tool]

[tool.hatch.version]
path = "src/aircraft_classification/__about__.py"
